--- a/frontend/index.css
+++ b/frontend/index.css
@@ -65,6 +65,18 @@
   height: 50px;
   padding-left: 5%;
   font-size: 120%;
+  /* background-color: #ECB541; */
+  /* border: 0px 0px 1% 0px; */
+  background-color:rgba(0, 0, 0, 0);
+  /* border-top-color: #ECB541;
+  border-bottom-color: #ECB541;
+  border-right-color: #ECB541;
+  border-left-color: #ECB541; */
+  border-top: 0px;
+  border-bottom: 1%;
+  border-right: 0px;
+  border-left: 0px;
+
 }
 
 .searchtext {
