--- a/frontend/schools/school.css
+++ b/frontend/schools/school.css
@@ -33,14 +33,6 @@
   width: 100%;
 }
 
-/* COMMON */
-
-body {
-  background-image: url("../material/pics/schoolBackground.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
 
 /* HEADING */
 
@@ -60,56 +52,100 @@ body {
 
 }
 
-/* COLLEGES SECTION */
-.colleges {
-  font-family: 'Nunito', sans-serif;
-  display: flex;
+body {
+  background-image: url("../material/pics/sBackground.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* TEACHERS */
+
+.teacherdiv {
   width: 70%;
   margin-left: 15%;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: flex;
+  margin-bottom: 5%;
+
 }
 
-.college {
+.boxes {
   display: flex;
   flex-direction: column;
-  width: 40%;
-  margin: 0% 5%;
-  border: 5px solid red;
-  margin-bottom: 10%;
-  padding: 2%;
-  background-color: #dbd8d5;
-  border-radius: 10%;
-  box-shadow: 25px 25px 25px black;
-
+  /* width: 70%; */
 }
 
-.collegepic {
+.heading {
+  font-size: 250%;
+  font-family: 'Concert One', cursive;
+}
+
+.maininfo {
   display: flex;
-  height: 100%;
-  width: 100%;
-  margin-bottom: 10%;
+  padding-bottom: 10%;
+}
+
+.tpic {
+  display: flex;
+  width: 30%;
+  height: 90%
 }
 
 .pic {
-  border-radius: 10%;
-  height: 100%;
+  border-radius: 50%;
   width: 100%;
+  height: 100%;
 }
 
-.collegetext {
+.tname {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding-left: 10%;
+  font-family: 'Nunito', sans-serif;
+  color: white;
 }
 
-.textdiv {
+.tname div {
   display: flex;
-  justify-content:space-around;
+
 }
 
-.lhead {
-  font-weight: bold;
+.informations {
+  display: flex;
+  width: 70%;
+  margin-left: 15%;
 }
+
+.info {
+  display: flex;
+  padding: 1% 0%;
+  font-size: 150%;
+  margin-left: 5%;
+  /* word-break: break-all; */
+}
+
+.infopic {
+  background-color: #fffafa;
+  border-radius: 5%;
+}
+
+.label {
+  display: flex;
+  font-family: 'Nunito', sans-serif;
+  font-weight: bold;
+  /* width: 20%; */
+  flex: 2;
+}
+
+.labelans {
+  display: flex;
+  font-family: 'Nunito', sans-serif;
+  padding-left: 3%;
+  word-wrap: break-word;
+  flex: 8;
+}
+
 
 /* FOOTER */
 
