models imports not working

--- a/backendPMG/mytemplates/partials/__navbar.html
+++ b/backendPMG/mytemplates/partials/__navbar.html
@@ -9,7 +9,7 @@
   <div class=" navlabel" ><a href="{% url 'home' %}">Praise My Guru</a> </div>
   <div class=" navlabel" ><a href="{% url 'collegesList' %}">Colleges</a> </div>
   <div class=" navlabel" ><a href="{% url 'schoolsList' %}">Schools</a> </div>
-  <div class=" navlabel" ><a href="{% url 'teachersList' %}">Guru's</a> </div>
+  <div class=" navlabel" ><a href="{% url 'gurusList' %}">Guru's</a> </div>
   <div class=" navlabel" ><a href="{% url 'addTeacher' %}">Add your Guru</a> </div>
   <div class=" navlabel" ><a href="{% url 'aboutus' %}">About Us</a></div>
   <div class=" navlabel" ><a href="{% url 'signin' %}">Register / LogIn</a></div>  
