--- a/backendPMG/static/css/home.css
+++ b/backendPMG/static/css/home.css
@@ -1,3 +1,4 @@
+
 /* COMMON */
 
 .heading {
@@ -14,7 +15,7 @@
 /* COVER */
 
 .cover {
-  background-image: url("./material/pics/cover.jpg");
+  background-image: url("../material/pics/cover.jpg");
   height: 100vh;
   background-size: cover;
 }
@@ -53,7 +54,7 @@
 /* ACHIVEMENTS */
 
 .achivementsec {
-  background-image: url("./material/pics/achivementsBackground.jpg");
+  background-image: url("../material/pics/achivementsBackground.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
@@ -94,7 +95,7 @@
 .topratedsec {
   display: flex;
   /* background-image: url("./material/pics/topratedBackground.jpg"); */
-  background-image: url("./material/pics/achivementsBackground.jpg");
+  background-image: url("../material/pics/achivementsBackground.jpg");
   padding: 2.5% 0%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -143,7 +144,7 @@
 .remarksec {
   display: flex;
   /* background-image: url("./material/pics/remarkBackground.jpg"); */
-  background-image: url("./material/pics/achivementsBackground.jpg");
+  background-image: url("../material/pics/achivementsBackground.jpg");
   padding: 2.5% 0%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -233,8 +234,9 @@
 }
 
 .contacttext {
-  display: flex;
+  display: inline;
   padding: 0% 5%;
+  /* flex-direction: column; */
 }
 
 .contactheading {
